packages/kiali/resources/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  gateways:
  - istio-system/cluster-k3s-meowhq-dev-gw
  hosts:
  - kiali.bee1.k3s.meowhq.dev
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kiali
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-global-ingress
  namespace: istio-system
spec:
  gateways:
  - istio-system/demo-meowhq-dev-gw
  hosts:
  - kiali.demo.meowhq.dev
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kiali
        port:
          number: 20001
